fixed screen flicker issue

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-
     <title>Teem</title>
   </head>
   <body>
+    <script>
+      const theme = localStorage.getItem('teem-ui-theme') || 'system';
+      if (theme === 'dark' || (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      }
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
