--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
     <title>Teem</title>
   </head>
   <body>
     <script>
-      const theme = localStorage.getItem('teem-ui-theme') || 'system';
-      if (theme === 'dark' || (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.classList.add('dark');
+      const theme = localStorage.getItem("teem-ui-theme") || "system";
+      if (
+        theme === "dark" ||
+        (theme === "system" &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
       }
     </script>
     <div id="root"></div>
