added meta tags to html

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,41 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
-    <title>Teem</title>
+
+    <title>Teem - Team Collaboration Platform</title>
+    <meta
+      name="description"
+      content="Real-time collaboration platform for remote teams"
+    />
+    <meta
+      name="keywords"
+      content="Teem, collaboration, remote, teams, real-time, communication"
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Teem - Team Collaboration Platform" />
+    <meta
+      property="og:description"
+      content="Real-time collaboration platform for remote teams"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757509560/general/gfxkyhii2wupy7qjbivo.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Teem" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Teem - Team Collaboration Platform" />
+    <meta
+      name="twitter:description"
+      content="Real-time collaboration platform for remote teams"
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757509560/general/gfxkyhii2wupy7qjbivo.jpg"
+    />
   </head>
   <body>
     <script>
