updated og image

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757509560/general/gfxkyhii2wupy7qjbivo.jpg"
+      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757771539/general/g04ebjdgjo07dyfc3qpq.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Teem" />
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757509560/general/gfxkyhii2wupy7qjbivo.jpg"
+      content="https://res.cloudinary.com/dddzjiuet/image/upload/v1757771539/general/g04ebjdgjo07dyfc3qpq.png"
     />
   </head>
   <body>
